--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
             <br><h3>What's New</h3>
             <div class="container" style="margin-top: 15px;">
               <div class="col-md-12" style="text-align: middle; vertical-align: middle;">
+		<li>[2020/09] Invited to serve as a PC member for AAAI 2021.</li>
 		<li>[2020/08] One co-author paper is accepted to TKDD.</li>
 		<li>[2020/04] One co-author paper is accepted to VLDB Journal.</li>
 		<li>[2020/03] One co-author paper is accepted to TOIS.</li>
@@ -352,6 +353,7 @@
                   <li>Social Network Analysis and Mining</li>
 		  <li>IEEE Access</li>
                   <li>Engineering Reports</li>
+		  <li>PC member for: AAAI 2021</li>
 		  <li>Sub-reviewer for: CIKM 2020, KDD 2020, CIKM 2018, IJCAI 2018, ICSOC 2017</li>
             </div>
           </div>
@@ -386,6 +388,7 @@
             <br><h2>Teaching Experience</h2>
           <div class="container" style="margin-top: 15px;">
             <div class="col-md-12" style="text-align: middle; vertical-align: middle;"> 
+		  <li>Teaching Assistant, COMP0084 Information Retrieval and Data Mining, Spring 2020, University College London</li>
                   <li>Teaching Assistant, Data Mining, Spring 2017, Sun Yat-sen University</li>
             </div>
           </div>
