--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
             <br><h3>What's New</h3>
             <div class="container" style="margin-top: 15px;">
               <div class="col-md-12" style="text-align: middle; vertical-align: middle;">
+		<li>[2020/09] One paper is accepted to Findings of EMNLP 2020.</li>
 		<li>[2020/09] Invited to serve as a PC member for AAAI 2021.</li>
 		<li>[2020/08] One co-author paper is accepted to TKDD.</li>
 		<li>[2020/04] One co-author paper is accepted to VLDB Journal.</li>
@@ -299,6 +300,9 @@
             <br><h2>Publications</h2>
             <div class="container">
             <div class="col-md-11" style="text-align: middle; vertical-align: middle;">
+            <li class="paper"> 
+	      <strong>Fanghua Ye</strong>, Jarana Manotumruksa, Emine Yilmaz, "<u>Unsupervised Few-Bits Semantic Hashing with Implicit Topics Modeling</u>," Findings of EMNLP, 2020.
+            </li>
             <li class="paper"> 
 	      Hong Huang, Yu Song, <strong>Fanghua Ye</strong>, Xing Xie, Xuanhua Shi, Hai Jin, "<u>Multi-Stage Network Embedding for Exploring Heterogeneous Edges</u>," ACM Transactions on Knowledge Discovery from Data (TKDD), 2020.
             </li>
