--- a/index.html
+++ b/index.html
@@ -197,6 +197,22 @@
 	<div class="container" style="margin-top: 0px;">
         <div class="col-md-12 content">
             <br><h2>Selected Projects</h2>
+	   <!-- WISH20 -->
+            <div class="container" style="margin-top: 45px;">
+              <div class="col-xs-12 col-lg-4" style="text-align: middle; vertical-align: middle;">
+                <img src="images/20WISH.png" width="300">
+              </div>
+
+              <div class="col-xs-12 col-md-8" style="text-align: left; vertical-align: middle;">
+                <strong>Unsupervised Few-Bits Semantic Hashing with Implicit Topics Modeling</strong> <span class="label label-danger">New</span><br> 
+                <strong>Fanghua Ye</strong>, Jarana Manotumruksa, Emine Yilmaz<br>
+                Findings of EMNLP 2020<br>
+                <br>
+
+                <a href="Documents/20WISH.pdf" class="btn btn-default btn-sm">Paper</a>
+		
+              </div>
+            </div>  
 		
 	    <!-- icdm19 -->
             <div class="container" style="margin-top: 45px;">
@@ -205,7 +221,7 @@
               </div>
 
               <div class="col-xs-12 col-md-8" style="text-align: left; vertical-align: middle;">
-                <strong>Discrete Overlapping Community Detection with Pseudo Supervision</strong> <span class="label label-danger">New</span><br> 
+                <strong>Discrete Overlapping Community Detection with Pseudo Supervision</strong> <br> 
                 <strong>Fanghua Ye</strong>, Chuan Chen, Zibin Zheng, Rong-Hua Li, Jeffrey Xu Yu<br>
                 IEEE International Conference on Data Mining (<strong>ICDM</strong>)<br>
                 Beijing, China, November 2019<br> <br>
