--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
 <div class="container" style="margin-top: 12px;">
     <div class="col-xs-12 col-md-11" style="vertical-align: middle; font-size: 108%">
-        <p align="justify"> <br> Welcome! My name is Fanghua Ye. I am a fully-funded PhD student at UCL, working with Prof. Emine Yilmaz. Prior to that, I received my master's degree from <a href="http://www.sysu.edu.cn/2012/cn/index.htm">Sun Yat-sen University</a> and my bachelor's degree from <a href="http://www.uestc.edu.cn/">University of Electronic Science and Technology of China (UESTC)</a>, where I studied in <a href="http://www.yingcai.uestc.edu.cn/">Yingcai Honors College of UESTC</a>.
+        <p align="justify"> <br> Welcome! My name is Fanghua Ye. I am a second-year PhD student at UCL, working with Prof. Emine Yilmaz. Prior to that, I received my master's degree from <a href="http://www.sysu.edu.cn/2012/cn/index.htm">Sun Yat-sen University</a> and my bachelor's degree from <a href="http://www.uestc.edu.cn/">University of Electronic Science and Technology of China (UESTC)</a>, where I studied in <a href="http://www.yingcai.uestc.edu.cn/">Yingcai Honors College of UESTC</a>.
         </p>
 
         <p align="justify"> My current research is focused on conversational AI. I also have a strong passion in graph learning.</p>         
@@ -210,7 +210,7 @@
                 <br> <br>
 
                 <a href="Documents/20WISH.pdf" class="btn btn-default btn-sm">Paper</a>
-		
+		<a href="https://github.com/smartyfh/WISH" class="btn btn-default btn-sm">Code</a>
               </div>
             </div>  
 		
