--- a/index.html
+++ b/index.html
@@ -207,7 +207,8 @@
                 <strong>Unsupervised Few-Bits Semantic Hashing with Implicit Topics Modeling</strong> <span class="label label-danger">New</span><br> 
                 <strong>Fanghua Ye</strong>, Jarana Manotumruksa, Emine Yilmaz<br>
                 Findings of EMNLP 2020<br>
-                <br> <br>
+		SustaiNLP: Workshop on Simple and Efficient Natural Language Processing
+                <br>
 
                 <a href="Documents/20WISH.pdf" class="btn btn-default btn-sm">Paper</a>
 		<a href="https://github.com/smartyfh/WISH" class="btn btn-default btn-sm">Code</a>
