--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
                 <strong>Fanghua Ye</strong>, Jarana Manotumruksa, Emine Yilmaz<br>
                 Findings of EMNLP 2020<br>
 		SustaiNLP: Workshop on Simple and Efficient Natural Language Processing
-                <br>
+                <br> <br>
 
                 <a href="Documents/20WISH.pdf" class="btn btn-default btn-sm">Paper</a>
 		<a href="https://github.com/smartyfh/WISH" class="btn btn-default btn-sm">Code</a>
@@ -318,7 +318,7 @@
             <div class="container">
             <div class="col-md-11" style="text-align: middle; vertical-align: middle;">
             <li class="paper"> 
-	      <strong>Fanghua Ye</strong>, Jarana Manotumruksa, Emine Yilmaz, "<u>Unsupervised Few-Bits Semantic Hashing with Implicit Topics Modeling</u>," Findings of EMNLP, 2020.
+	      <strong>Fanghua Ye</strong>, Jarana Manotumruksa, Emine Yilmaz, "<u>Unsupervised Few-Bits Semantic Hashing with Implicit Topics Modeling</u>," Findings of EMNLP, 2020. [<a href="https://github.com/smartyfh/WISH"><font size="4" color="red">code</font></a>]
             </li>
             <li class="paper"> 
 	      Hong Huang, Yu Song, <strong>Fanghua Ye</strong>, Xing Xie, Xuanhua Shi, Hai Jin, "<u>Multi-Stage Network Embedding for Exploring Heterogeneous Edges</u>," ACM Transactions on Knowledge Discovery from Data (TKDD), 2020.
