--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
                 <br> <br>
 
                 <a href="Documents/20WISH.pdf" class="btn btn-default btn-sm">Paper</a>
-		<a href="https://github.com/smartyfh/WISH" class="btn btn-default btn-sm">Code</a>
+		<a href="https://www.aclweb.org/anthology/2020.findings-emnlp.233.pdf" class="btn btn-default btn-sm">Code</a>
               </div>
             </div>  
 		
