--- a/index.html
+++ b/index.html
@@ -369,11 +369,7 @@
             <br><h2>Academic Services</h2>
           <div class="container" style="margin-top: 15px;">
             <div class="col-md-12" style="text-align: middle; vertical-align: middle;">
-		   <li>IEEE Transactions on Cybernetics</li>
-		   <li>World Wide Web Journal</li>
-                  <li>Social Network Analysis and Mining</li>
-		  <li>IEEE Access</li>
-                  <li>Engineering Reports</li>
+		  <li>Journal reviewer for: IEEE Transactions on Cybernetics, World Wide Web Journal, Social Network Analysis and Mining, IEEE Access</li>
 		  <li>PC member for: AAAI 2021</li>
 		  <li>Sub-reviewer for: CIKM 2020, KDD 2020, CIKM 2018, IJCAI 2018, ICSOC 2017</li>
             </div>
