--- a/index.html
+++ b/index.html
@@ -405,6 +405,7 @@
             <br><h2>Teaching Experience</h2>
           <div class="container" style="margin-top: 15px;">
             <div class="col-md-12" style="text-align: middle; vertical-align: middle;"> 
+		  <li>Teaching Assistant, COMP0087: Statistical Natural Language Processing, Spring 2021, University College London</li>
 		  <li>Teaching Assistant, COMP0084 Information Retrieval and Data Mining, Spring 2020, University College London</li>
                   <li>Teaching Assistant, Data Mining, Spring 2017, Sun Yat-sen University</li>
             </div>
