--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
             <br><h3>What's New</h3>
             <div class="container" style="margin-top: 15px;">
               <div class="col-md-12" style="text-align: middle; vertical-align: middle;">
+		<li>[2021/01] Two papers are accepted to TheWebConf 2021.</li>
 		<li>[2020/09] One paper is accepted to Findings of EMNLP 2020.</li>
 		<li>[2020/09] Invited to serve as a PC member for AAAI 2021.</li>
 		<li>[2020/08] One co-author paper is accepted to TKDD.</li>
@@ -317,6 +318,12 @@
             <br><h2>Publications</h2>
             <div class="container">
             <div class="col-md-11" style="text-align: middle; vertical-align: middle;">
+            <li class="paper"> 
+	      <strong>Fanghua Ye</strong>, Jarana Manotumruksa, Qiang Zhang, Shenghui Li, Emine Yilmaz, "<u>Slot Self-Attentive Dialogue State Tracking</u>," The Web Conference (WWW), 2021.
+            </li>
+            <li class="paper"> 
+	      <strong>Fanghua Ye</strong>, Zhiwei Lin, Chuan Chen, Zibin Zheng, Hong Huang, "<u>Outlier-Resilient Web Service QoS Prediction</u>," The Web Conference (WWW), 2021.
+            </li>
             <li class="paper"> 
 	      <strong>Fanghua Ye</strong>, Jarana Manotumruksa, Emine Yilmaz, "<u>Unsupervised Few-Bits Semantic Hashing with Implicit Topics Modeling</u>," Findings of EMNLP, 2020. [<a href="https://github.com/smartyfh/WISH"><font size="4" color="red">code</font></a>]
             </li>
