--- a/index.html
+++ b/index.html
@@ -198,6 +198,24 @@
 	<div class="container" style="margin-top: 0px;">
         <div class="col-md-12 content">
             <br><h2>Selected Projects</h2>
+	  <!-- WWW21 -->
+            <div class="container" style="margin-top: 45px;">
+              <div class="col-xs-12 col-lg-4" style="text-align: middle; vertical-align: middle;">
+                <img src="images/21STAR.png" width="300">
+              </div>
+
+              <div class="col-xs-12 col-md-8" style="text-align: left; vertical-align: middle;">
+                <strong>Slot Self-Attentive Dialogue State Tracking</strong> <span class="label label-danger">New</span><br> 
+                <strong>Fanghua Ye</strong>, Jarana Manotumruksa, Qiang Zhang, Shenghui Li, Emine Yilmaz<br>
+                The Web Conference (<strong>WWW</strong>) <br>
+		Online, April 2021
+                <br> <br>
+
+                <a href="https://arxiv.org/abs/2101.09374" class="btn btn-default btn-sm">Paper</a>
+		<a href="https://github.com/smartyfh/DST-STAR" class="btn btn-default btn-sm">Code</a>
+              </div>
+            </div>  
+		
 	   <!-- WISH20 -->
             <div class="container" style="margin-top: 45px;">
               <div class="col-xs-12 col-lg-4" style="text-align: middle; vertical-align: middle;">
@@ -272,7 +290,7 @@
 
 
             <!-- wechat -->
-            <div class="container" style="margin-top: 45px;">
+<!--             <div class="container" style="margin-top: 45px;">
               <div class="col-xs-12 col-lg-4" style="text-align: middle; vertical-align: middle;">
                 <img src="images/17multiview.png" width="300">
               </div>
@@ -283,11 +301,11 @@
                 WeChat Group, Tencent Inc.<br>
                 April 2017 - March 2018
               </div>
-            </div>   
+            </div>    -->
 
 
             <!-- INS -->
-            <div class="container" style="margin-top: 45px;">
+<!--             <div class="container" style="margin-top: 45px;">
               <div class="col-xs-12 col-lg-4" style="text-align: middle; vertical-align: middle;">
                 <img src="images/16ins.png" width="300">
               </div>
@@ -301,7 +319,7 @@
                 <a href="https://www.sciencedirect.com/science/article/pii/S0020025516308118" class="btn btn-default btn-sm">Paper</a>
 		<a href="https://github.com/smartyfh/KEP-Index" class="btn btn-default btn-sm">Code</a>
               </div>
-            </div>   
+            </div>    -->
 
 
 
@@ -319,10 +337,10 @@
             <div class="container">
             <div class="col-md-11" style="text-align: middle; vertical-align: middle;">
             <li class="paper"> 
-	      <strong>Fanghua Ye</strong>, Jarana Manotumruksa, Qiang Zhang, Shenghui Li, Emine Yilmaz, "<u>Slot Self-Attentive Dialogue State Tracking</u>," The Web Conference (WWW), 2021.
+	      <strong>Fanghua Ye</strong>, Jarana Manotumruksa, Qiang Zhang, Shenghui Li, Emine Yilmaz, "<u>Slot Self-Attentive Dialogue State Tracking</u>," The Web Conference (WWW), 2021. [<a href="https://github.com/smartyfh/DST-STAR"><font size="4" color="red">code</font></a>]
             </li>
             <li class="paper"> 
-	      <strong>Fanghua Ye</strong>, Zhiwei Lin, Chuan Chen, Zibin Zheng, Hong Huang, "<u>Outlier-Resilient Web Service QoS Prediction</u>," The Web Conference (WWW), 2021.
+	      <strong>Fanghua Ye</strong>, Zhiwei Lin, Chuan Chen, Zibin Zheng, Hong Huang, "<u>Outlier-Resilient Web Service QoS Prediction</u>," The Web Conference (WWW), 2021. [<a href="https://github.com/smartyfh/CMF-CTF"><font size="4" color="red">code</font></a>]
             </li>
             <li class="paper"> 
 	      <strong>Fanghua Ye</strong>, Jarana Manotumruksa, Emine Yilmaz, "<u>Unsupervised Few-Bits Semantic Hashing with Implicit Topics Modeling</u>," Findings of EMNLP, 2020. [<a href="https://github.com/smartyfh/WISH"><font size="4" color="red">code</font></a>]
@@ -376,7 +394,7 @@
             <br><h2>Academic Services</h2>
           <div class="container" style="margin-top: 15px;">
             <div class="col-md-12" style="text-align: middle; vertical-align: middle;">
-		  <li>Journal reviewer for: IEEE Transactions on Cybernetics, World Wide Web Journal, Social Network Analysis and Mining, IEEE Access</li>
+		  <li>Journal reviewer for: IEEE Transactions on Cybernetics, World Wide Web Journal, Scientific Reports, Social Network Analysis and Mining, IEEE Access</li>
 		  <li>PC member for: AAAI 2021</li>
 		  <li>Sub-reviewer for: CIKM 2020, KDD 2020, CIKM 2018, IJCAI 2018, ICSOC 2017</li>
             </div>
@@ -412,7 +430,7 @@
             <br><h2>Teaching Experience</h2>
           <div class="container" style="margin-top: 15px;">
             <div class="col-md-12" style="text-align: middle; vertical-align: middle;"> 
-		  <li>Teaching Assistant, COMP0087: Statistical Natural Language Processing, Spring 2021, University College London</li>
+		  <li>Teaching Assistant, COMP0087 Statistical Natural Language Processing, Spring 2021, University College London</li>
 		  <li>Teaching Assistant, COMP0084 Information Retrieval and Data Mining, Spring 2020, University College London</li>
                   <li>Teaching Assistant, Data Mining, Spring 2017, Sun Yat-sen University</li>
             </div>
